tests/e2e/function_call_no_inline_expression.story
(service foo) (key: 2)
